feat 修复夜间模式闪退问题(因为actionBar的设置错误)

--- a/password/app/src/main/res/values-night/themes.xml
+++ b/password/app/src/main/res/values-night/themes.xml
@@ -1,13 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Password" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Password" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">#395F84</item>
+        <item name="colorPrimaryVariant">#20374D</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">#5D6670</item>
+        <item name="colorSecondaryVariant">#373D43</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
