feat：1.新增PDF导出、旧密码可用功能 2.支持将数据导出到外部存储中

--- a/password/app/src/main/res/layout/activity_set_password.xml
+++ b/password/app/src/main/res/layout/activity_set_password.xml
@@ -35,7 +35,7 @@
         android:inputType="numberPassword"
         android:background="@drawable/background_input"
         android:hint="输入旧密码"
-        app:layout_constraintBottom_toTopOf="@+id/setpassword_input_new"/>
+        app:layout_constraintTop_toBottomOf="@+id/setpassword_result_tip"/>
 
     <EditText
         android:id="@+id/setpassword_input_new"
@@ -44,7 +44,7 @@
         android:inputType="numberPassword"
         android:background="@drawable/background_input"
         android:hint="输入新密码"
-        app:layout_constraintBottom_toTopOf="@+id/setpassword_input_new_again"/>
+       app:layout_constraintTop_toBottomOf="@+id/setpassword_input_old"/>
 
     <EditText
         android:id="@+id/setpassword_input_new_again"
@@ -53,16 +53,17 @@
         android:inputType="numberPassword"
         android:background="@drawable/background_input"
         android:hint="再次输入新密码"
-        app:layout_constraintBottom_toTopOf="@+id/setpassword_btn_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/setpassword_input_new"/>
 
     <LinearLayout
         android:id="@+id/setpassword_btn_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintVertical_weight="1"
         android:gravity="center"
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/setpassword_input_new_again"
+        >
 
         <Button
             android:id="@+id/setpassword_btn_commit"
