--- a/password/app/src/main/res/layout/activity_detail.xml
+++ b/password/app/src/main/res/layout/activity_detail.xml
@@ -165,7 +165,26 @@
                 app:layout_constraintTop_toBottomOf="@+id/detail_tip_6"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
-                
+            <TextView
+                android:id="@+id/detail_tip_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="创建时间:"
+                android:textSize="18dp"
+                android:textColor="?attr/colorPrimary"
+                app:layout_constraintTop_toBottomOf="@+id/detail_value_remark"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+            <TextView
+                android:id="@+id/detail_value_date"
+                android:layout_width="0dp"
+                app:layout_constraintHorizontal_weight="1"
+                android:layout_height="wrap_content"
+                android:text="88888888888888顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶88888"
+                android:textSize="20dp"
+                android:paddingLeft="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/detail_tip_7"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
