--- a/password/app/src/main/res/xml/root_preferences.xml
+++ b/password/app/src/main/res/xml/root_preferences.xml
@@ -1,24 +1,30 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="设置">
-
         <Preference
             app:key="reSetPin"
             app:title="修改启动密码" />
-
         <Preference
             app:key="backup"
             app:title="生成备份文件" />
-
         <Preference
             app:key="recovery"
             app:title="从备份文件读取数据" />
-
         <Preference
             app:key="outToTxt"
-            app:title="明文导出"/>
+            app:title="TXT文本导出"/>
+    </PreferenceCategory>
 
-
+    <PreferenceCategory app:title="存储到外存">
+        <Preference
+            app:key="outToPDF"
+            app:title="PDF导出(需要存储权限)"/>
+        <Preference
+            app:key="backup2"
+            app:title="生成备份文件2(需要存储权限)" />
+        <Preference
+            app:key="outToTxt2"
+            app:title="TXT文本导出2(需要存储权限)"/>
     </PreferenceCategory>
 
     <PreferenceCategory app:title="帮助&amp;关于">
@@ -28,6 +34,9 @@
         <Preference
             app:key="about"
             app:title="关于"/>
+        <Preference
+            app:key="update"
+            app:title="检查更新"/>
 
     </PreferenceCategory>
 
